Invoked the playGame function

--- a/index.html
+++ b/index.html
@@ -77,9 +77,7 @@
             }
         }
 
-
         function playGame() {
-
             let humanScore = 0, computerScore = 0;
             for(let i = 0; i < 3; i++) {
                 const humanSelection = getHumanChoice();
@@ -109,7 +107,7 @@
                 return;
             }
         }
-
+        // Invoked the playGame function
         playGame();
     </script>
 </body>
