Implemented Restart game function and improved code logic

--- a/index.html
+++ b/index.html
@@ -15,5 +15,7 @@
 
     <p id="score">Score: Human 0 - 0 Computer</p>
 
+    <button id="restart" style="display:none;">Restart Game</button>
+
 </body>
 </html>
